--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-explorer.xhtml
@@ -14,8 +14,8 @@
         <p:column headerText="#{bundle.Pattern}" sortBy="#{item.pattern}">
             #{item.pattern}
         </p:column>
-        <p:column headerText="#{bundle.Type}" sortBy="#{_detailBean.model.getLabel(item.typeCode)}">
-            #{_detailBean.model.getLabel(item.typeCode)}
+        <p:column headerText="#{bundle.Type}" sortBy="#{_detailBean.getLabel(item.typeCode)}">
+            #{_detailBean.getLabel(item.typeCode)}
         </p:column>
     </ui:define>   
 
