--- a/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/expl/expl-toolbar.xhtml
@@ -116,6 +116,7 @@
             <p:commandButton value="#{bundle.CloseSession}" title="#{bundle.ExitProgramm}" 
                              rendered="#{explorerBean.explorerViewMode}"
                              ajax="false" icon="ui-icon-extlink"
+                             onclick="return isClose = 1;"
                              action="#{sessionBean.onSessionExit()}"/>
         </f:facet>
 
