--- a/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/tree/tree-toolbar.xhtml
@@ -30,9 +30,9 @@
                          
             <p:splitButton value="#{bundle.Actions}" icon="ui-icon-gear"
                             rendered="#{false}">
-                <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateChildGroup}" title="#{bundle.CreateChildGroup}"                            
+                <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateChildGroup}"                            
                             oncomplete="document.getElementById('#{_frmTree}:createTreeCardBtn').click();"/>                
-                <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateInNullLevel}" title="#{bundle.CreateInNullLevel}"
+                <p:menuitem icon="ui-icon-plus" value="#{bundle.CreateInNullLevel}"
                             oncomplete="document.getElementById('#{_frmTree}:createRootTreeCardBtn').click();"/>
             </p:splitButton>
                                 
