--- a/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/admin/numPattern/num-pattern-сard.xhtml
@@ -11,7 +11,7 @@
 
         <p:tab id="cardTab" title="#{bundle.Explorer}">     
             <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
-                         columnClasses="ui-grid-col-6 col-padding " >
+                         columnClasses="ui-grid-col-12 col-padding" >
 
                 <p:outputLabel value="#{bundle.Type}" />
                 <p:selectOneRadio value="#{_bean.editedItem.typeCode}" layout="pageDirection" 
@@ -27,10 +27,9 @@
                                  onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                  onchange="return itemChange = 1;"
                                  disabled="#{!_bean.isHaveRightEdit()}"
-                                 style="width: 100%;"
+                                 styleClass="ui-grid-col-12"
                                  required="#{param['isRequired'] == 'true'}"
                                  requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
-                    <p:message for="name" display="icon"/>
                     <p:watermark for="name" value="#{bundle.InputNameNumerator}" />
                 </h:panelGrid>
             </p:panelGrid>
@@ -45,26 +44,24 @@
                                      onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                      onchange="return itemChange = 1;"
                                      disabled="#{!_bean.isHaveRightEdit()}"
-                                     style="width: 100%;"
+                                     styleClass="ui-grid-col-12"
                                      required="#{param['isRequired'] == 'true'}"
                                      requiredMessage="#{bundle.Field} [#{bundle.Pattern}] #{bundle.MustBeFilled}">
                             <p:keyFilter regEx="/[CODEMPGRTYNy//-]/i" />
                         </p:inputText>    
-                        <p:message for="pattern" display="icon"/>
                         <p:watermark for="pattern" value="#{bundle.InputPattern}"/>
                     </h:panelGrid>
 
                     <p:outputLabel value="#{bundle.LeadingZeros}" />
-                    <h:panelGrid columns="2" styleClass="ui-grid-col-2">
-                        <p:spinner id="leadingZeros" value="#{_bean.editedItem.leadingZeros}" 
-                                   onkeypress="checkEsc(#{_bean.cancelBtnName});"
-                                   onchange="return itemChange = 1;"
-                                   disabled="#{!_bean.isHaveRightEdit()}"
-                                   required="#{param['isRequired'] == 'true'}"
-                                   min="0" max="10"
-                                   requiredMessage="#{bundle.Field} [#{bundle.LeadingZeros}] #{bundle.MustBeFilled}">
-                        </p:spinner>
-                    </h:panelGrid>                    
+
+                    <p:spinner id="leadingZeros" value="#{_bean.editedItem.leadingZeros}" 
+                               onkeypress="checkEsc(#{_bean.cancelBtnName});"
+                               onchange="return itemChange = 1;"
+                               disabled="#{!_bean.isHaveRightEdit()}"
+                               required="#{param['isRequired'] == 'true'}"
+                               min="0" max="10"
+                               requiredMessage="#{bundle.Field} [#{bundle.LeadingZeros}] #{bundle.MustBeFilled}">
+                    </p:spinner>
 
                     <p:selectBooleanCheckbox value="#{_bean.editedItem.resetNewYear}" 
                                              itemLabel="#{bundle.ResetNewYear}"
