--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -27,7 +27,7 @@
                     <ui:param name="_items" value="#{postBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setPost"/>
                     <ui:param name="_actionSelect" value="onPostSelected"/>
-                    <ui:param name="_update" value=""/>
+                    <ui:param name="_update" value="staffGroup"/>
                 </ui:include>
 
                 <p:outputLabel value="#{bundle.Employee}"/>
@@ -42,21 +42,19 @@
                     <ui:param name="_items" value="#{userBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setEmployee"/>
                     <ui:param name="_actionSelect" value="onEmployeeSelected"/>
-                    <ui:param name="_update" value=""/>
+                    <ui:param name="_update" value="staffGroup"/>
                 </ui:include>
                 
                 <p:outputLabel value="#{bundle.Name}" />
-                <h:panelGroup layout="grid" styleClass="ui-grid-col-12">
-                    <h:panelGroup id="staffGroup" styleClass="ui-grid-col-12">
-                        <p:inputTextarea id="name" value="#{_bean.editedItem.name}" 
+                <h:panelGroup id="staffGroup" layout="grid" styleClass="ui-grid-col-12">
+                    <p:inputTextarea id="name" value="#{_bean.editedItem.name}" 
                                          rows="3" styleClass="ui-grid-col-12"
                                          disabled="#{_bean.isReadOnly()}"
                                          onkeypress="checkEsc(#{_bean.cancelBtnName});"
                                          onchange="return itemChange = 1;"
                                          required="#{param['isRequired'] == 'true'}"                                         
-                                         requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}"/>
-                        <p:message for="name" display="tooltip"/>
-                    </h:panelGroup>
+                                         requiredMessage="#{bundle.Field} [#{bundle.Name}] #{bundle.MustBeFilled}">
+                    </p:inputTextarea>
 
                     <p:commandButton value="#{bundle.ToForm}" title="#{bundle.MakeName}"
                                      update="staffGroup"
