--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
         xmlns:ui="http://java.sun.com/jsf/facelets"
         xmlns:h="http://xmlns.jcp.org/jsf/html"                
-        xmlns:p="http://primefaces.org/ui">
+        xmlns:p="http://primefaces.org/ui"
+        xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -29,7 +30,8 @@
 
     <ui:insert name="preRendered"/>
     
-    <h:body>        
+    <h:body>
+        <f:view locale="#{sessionBean.locale}"></f:view>
         <script type="text/javascript">
             PrimeFaces.locales ['ru'] = {
                 closeText: 'Закрыть',
